[gd_scene load_steps=12 format=2]

[ext_resource path="res://Juego/Meteoritos/MeteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Fuentes/Kenney Future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Juego/Meteoritos/warning.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 392 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 519.5, 8.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 799.5, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17, 699.5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFX_Advertencia:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "warning"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFX_Advertencia:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.160784 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Timer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.974443 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[node name="SectorMeteoritos" type="Node2D"]
script = ExtResource( 2 )

[node name="Bordes" type="Node2D" parent="."]
position = Vector2( -513, -379 )

[node name="StaticBody2D" type="StaticBody2D" parent="Bordes"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/StaticBody2D"]
position = Vector2( 3, 382 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Bordes"]
position = Vector2( 1025, 0 )
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/StaticBody2D2"]
position = Vector2( 3, 382 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Bordes"]
position = Vector2( -1, 3 )
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/StaticBody2D3"]
position = Vector2( 509.5, -1.5 )
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Bordes"]
position = Vector2( -1, 775 )
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/StaticBody2D4"]
position = Vector2( 509.5, -1.5 )
shape = SubResource( 2 )

[node name="SensoresRespawn" type="Node2D" parent="."]
position = Vector2( -506, -378 )

[node name="Area2D" type="Area2D" parent="SensoresRespawn"]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensoresRespawn/Area2D"]
position = Vector2( 501.5, -318 )
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="SensoresRespawn"]
position = Vector2( 0, 1383 )
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensoresRespawn/Area2D2"]
position = Vector2( 501.5, -318 )
shape = SubResource( 3 )

[node name="Area2D3" type="Area2D" parent="SensoresRespawn"]
position = Vector2( 0, 1383 )
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensoresRespawn/Area2D3"]
position = Vector2( -281, -1011.5 )
shape = SubResource( 4 )

[node name="Area2D4" type="Area2D" parent="SensoresRespawn"]
position = Vector2( 1584, 1383 )
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensoresRespawn/Area2D4"]
position = Vector2( -281, -1011.5 )
shape = SubResource( 4 )

[node name="Spawners" type="Node2D" parent="."]
position = Vector2( -527, -396 )

[node name="MeteoritoSpawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -144, 912 )
direccion = Vector2( 1, -1 )

[node name="MeteoritoSpawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 175, 899 )
direccion = Vector2( 0.5, -1 )

[node name="MeteoritoSpawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 507, 912 )
direccion = Vector2( 0, -1 )

[node name="MeteoritoSpawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 826, 912 )
direccion = Vector2( -0.5, -1 )

[node name="MeteoritoSpawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1181, 908 )
direccion = Vector2( -1, -1 )

[node name="MeteoritoSpawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1181, 612 )
direccion = Vector2( -1, -0.5 )

[node name="MeteoritoSpawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1181, 347 )
direccion = Vector2( -1, -0.1 )

[node name="MeteoritoSpawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1185, 114 )
direccion = Vector2( -1, 0.5 )

[node name="MeteoritoSpawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1181, -173 )
direccion = Vector2( -1, 1 )

[node name="MeteoritoSpawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 871, -177 )
direccion = Vector2( -0.5, 1 )

[node name="MeteoritoSpawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 516, -177 )
direccion = Vector2( 0, 1 )

[node name="MeteoritoSpawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 206, -190 )
direccion = Vector2( 0.5, 1 )

[node name="MeteoritoSpawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -131, -186 )

[node name="MeteoritoSpawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -140, 92 )
direccion = Vector2( 1, 0.7 )

[node name="MeteoritoSpawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -136, 388 )
direccion = Vector2( 1, 0 )

[node name="MeteoritoSpawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -149, 657 )
direccion = Vector2( 1, -0.7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.666667, 0.172549, 0.172549, 0.431373 )

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -19.5
margin_right = 70.0
margin_bottom = 19.5
custom_fonts/font = SubResource( 5 )
text = "ADVERTENCIA:
METEORITOS!"
align = 1

[node name="SFX_Advertencia" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "warning"
anims/default = SubResource( 6 )
anims/warning = SubResource( 7 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
